QTimerInfo/Unix: Fix roundToMillisecond when it's already rounded

Don't add 1 ms when it's rounded to 1 ms.

Found when running unit tests on QNX, where the clock did not update
between two subsequent calls to clock_gettime().

All of this ought to be refactored to use std::chrono::nanoseconds.

Fixes: QTBUG-100438
Change-Id: I47dc6426c33d3a66dec946ae3589694745ed1835
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit 47cf674477473a05390df4a218fd6b3867c6e923)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>